<?xml version="1.0" encoding="utf-8"?>
<FrameLayout style="@style/TranslucentDialogOuter"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/dialog" style="@style/DialogOuter">
        <ScrollView android:paddingBottom="0.0dip" android:scrollbars="none" style="@style/DialogInner">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <pl.jbzd.core.ui.view.TextView android:id="@id/title" android:text="@string/signin_title" app:font="RobotoRegular" style="@style/PopUpTitle" />
                <pl.jbzd.core.ui.view.EditText android:id="@id/email" android:hint="@string/signin_placeholder_login" android:layout_below="@id/title" android:inputType="textEmailAddress" app:font="RobotoRegular" style="@style/PopUpEdiText2" />
                <pl.jbzd.core.ui.view.EditText android:id="@id/password" android:hint="@string/signin_placeholder_password" android:layout_below="@id/email" android:inputType="textPassword" app:font="RobotoRegular" style="@style/PopUpEdiText2" />
                <pl.jbzd.core.ui.view.TextView android:id="@id/btnSignin" android:layout_marginTop="12.0dip" android:text="@string/signin_cta" android:layout_below="@id/password" app:font="RobotoMedium" style="@style/PopUpButton" />
                <pl.jbzd.core.ui.view.TextView android:textColor="?cTextColorDark" android:gravity="center_horizontal" android:id="@id/or" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="16.0dip" android:text="@string/signin_or" android:layout_below="@id/btnSignin" />
                <pl.jbzd.core.ui.view.TextView android:id="@id/btnSiginWithFacebook" android:text="@string/signin_cta_facebook" android:layout_below="@id/or" app:font="RobotoMedium" style="@style/PopUpSocialButton" />
                <pl.jbzd.core.ui.view.TextView android:textColor="?cTextColorDark" android:gravity="center_horizontal" android:id="@id/term" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="2.0dip" android:text="@string/signin_terms" android:layout_below="@id/btnSiginWithFacebook" />
                <pl.jbzd.core.ui.view.TextView android:textColor="?colorAccent" android:gravity="center_horizontal" android:id="@id/btnTerm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/signup_terms_btn" android:layout_below="@id/term" />
                <LinearLayout android:orientation="horizontal" android:id="@id/footer" android:background="?cOuterBackground" android:paddingTop="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/btnTerm">
                    <pl.jbzd.core.ui.view.TextView android:textSize="@dimen/text_size_xs" android:id="@id/btnRestorePassword" android:layout_width="0.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="8.0dip" android:text="@string/signup_resotre_password" android:layout_weight="1.0" app:font="RobotoMedium" style="@style/DarkGreyButton" />
                    <pl.jbzd.core.ui.view.TextView android:textSize="@dimen/text_size_xs" android:id="@id/btnSignup" android:layout_width="0.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="24.0dip" android:text="@string/signup_signup" android:layout_weight="1.0" app:font="RobotoMedium" style="@style/DarkGreyButton" />
                </LinearLayout>
                <View android:id="@id/empty" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/footer" />
                <pl.jbzd.core.ui.view.LoaderLayout android:id="@id/loader" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/empty" android:layout_below="@id/title" app:loaderBackgroundColor="?cPopUpInnerBackground" app:loaderTextColor="?cTextColorDark" app:loaderIndicatorColor="?cTextColorDark" app:loaderIndicatorSize="@dimen/loader_layout_xsmall_loader_size" app:loaderIndicatorWidth="2.0dip" app:loaderTextSize="@dimen/text_size_sm" app:loaderTextMarginLeft="@dimen/loader_layout_loader_text_margin_horizontal" app:loaderTextMarginTop="@dimen/loader_layout_loader_margin_bottom" app:loaderTextMarginRight="@dimen/loader_layout_loader_text_margin_horizontal" app:loaderInitText="@string/signin_loading" />
            </RelativeLayout>
        </ScrollView>
        <ImageView android:id="@id/close" style="@style/DialogCloseButton" />
    </RelativeLayout>
</FrameLayout>