<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff000000" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <pl.jbzd.core.ui.view.TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:id="@id/btnShare" android:background="?cButtonSocialBackground" android:paddingLeft="30.0dip" android:paddingTop="14.0dip" android:paddingRight="30.0dip" android:paddingBottom="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_title" android:layout_centerInParent="true" android:layout_centerHorizontal="true" android:textAllCaps="true" app:font="RobotoBold" />
    <pl.jbzd.core.ui.view.TextView android:textSize="40.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/gallery_share_text" android:layout_above="@id/btnShare" android:layout_centerHorizontal="true" />
    <pl.jbzd.core.ui.view.TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="40.0dip" android:text="@string/gallery_back" android:drawableLeft="@drawable/gallery_arrow_back" android:drawablePadding="10.0dip" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <pl.jbzd.core.ui.view.TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/btnClose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:layout_marginBottom="40.0dip" android:text="@string/gallery_finish" android:drawableRight="@drawable/gallery_arrow_finish" android:drawablePadding="10.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>