<?xml version="1.0" encoding="utf-8"?>
<FrameLayout style="@style/TranslucentDialogOuter"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/dialog" style="@style/DialogOuter">
        <ScrollView android:paddingBottom="12.0dip" android:scrollbars="none" style="@style/DialogInner">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:id="@id/empty1" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <ImageView android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:src="@drawable/avatar" android:scaleType="fitCenter" android:layout_centerHorizontal="true" />
                <pl.jbzd.core.ui.view.EditText android:id="@id/title" android:layout_marginTop="20.0dip" android:layout_marginBottom="0.0dip" android:hint="@string/add_kwejk_placeholder" android:layout_below="@id/image" android:inputType="text" style="@style/PopUpEdiText" />
                <pl.jbzd.core.ui.view.EditText android:id="@id/tags" android:layout_marginTop="12.0dip" android:layout_marginBottom="0.0dip" android:hint="@string/add_kwejk_tags_placeholder" android:maxLines="3" android:layout_below="@id/title" android:inputType="textMultiLine|textNoSuggestions" style="@style/PopUpEdiText" />
                <pl.jbzd.app.ui.view.TagGroup android:id="@id/tagList" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="0.0dip" android:layout_below="@id/tags" app:atg_textColor="#ffffffff" app:atg_backgroundColor="#ff666666" app:atg_pressedBackgroundColor="#ff444444" app:atg_horizontalSpacing="8.0dip" app:atg_horizontalPadding="14.0dip" app:atg_verticalPadding="8.0dip" />
                <pl.jbzd.core.ui.view.TextView android:textSize="@dimen/text_size_md" android:id="@id/button" android:layout_width="fill_parent" android:layout_marginTop="12.0dip" android:text="@string/add_kwejk_send" android:layout_below="@id/tagList" app:font="RobotoBold" style="@style/PopUpInlineButton" />
                <View android:id="@id/empty2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/button" />
                <pl.jbzd.core.ui.view.LoaderLayout android:id="@id/loader" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/empty2" android:layout_below="@id/empty1" app:loaderBackgroundColor="?cPopUpInnerBackground" app:loaderTextColor="?cTextColorDark" app:loaderIndicatorColor="?cTextColorDark" app:loaderIndicatorSize="@dimen/loader_layout_xsmall_loader_size" app:loaderIndicatorWidth="2.0dip" app:loaderTextSize="@dimen/text_size_sm" app:loaderTextMarginLeft="@dimen/loader_layout_loader_text_margin_horizontal" app:loaderTextMarginTop="@dimen/loader_layout_loader_margin_bottom" app:loaderTextMarginRight="@dimen/loader_layout_loader_text_margin_horizontal" app:loaderInitText="@string/adding_kwejk" />
            </RelativeLayout>
        </ScrollView>
        <ImageView android:id="@id/close" style="@style/DialogCloseButton" />
    </RelativeLayout>
</FrameLayout>