<?xml version="1.0" encoding="utf-8"?>
<FrameLayout style="@style/TranslucentDialogOuter"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/dialog" style="@style/DialogOuter">
        <ScrollView android:paddingBottom="12.0dip" android:scrollbars="none" style="@style/DialogInner">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <pl.jbzd.core.ui.view.TextView android:id="@id/title" android:layout_marginBottom="0.0dip" android:text="@string/restore_password_title" app:font="RobotoRegular" style="@style/PopUpTitle" />
                <pl.jbzd.core.ui.view.TextView android:id="@id/button" android:layout_marginTop="24.0dip" android:text="@string/restore_password_button" android:layout_below="@id/title" app:font="RobotoBold" style="@style/PopUpInlineButton" />
                <pl.jbzd.core.ui.view.EditText android:id="@id/edit" android:layout_marginTop="24.0dip" android:hint="@string/restore_password_placeholder" android:layout_toLeftOf="@id/button" android:layout_below="@id/title" android:inputType="textEmailAddress" app:font="RobotoRegular" style="@style/PopUpEdiText" />
                <View android:id="@id/empty" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/edit" />
                <pl.jbzd.core.ui.view.LoaderLayout android:id="@id/loader" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/empty" android:layout_below="@id/title" app:loaderBackgroundColor="?cPopUpInnerBackground" app:loaderTextColor="?cTextColorDark" app:loaderIndicatorColor="?cTextColorDark" app:loaderIndicatorSize="@dimen/loader_layout_xsmall_loader_size" app:loaderIndicatorWidth="2.0dip" app:loaderTextSize="@dimen/text_size_sm" app:loaderTextMarginLeft="@dimen/loader_layout_loader_text_margin_horizontal" app:loaderTextMarginTop="@dimen/loader_layout_loader_margin_bottom" app:loaderTextMarginRight="@dimen/loader_layout_loader_text_margin_horizontal" app:hideText="true" />
            </RelativeLayout>
        </ScrollView>
        <ImageView android:id="@id/close" style="@style/DialogCloseButton" />
    </RelativeLayout>
</FrameLayout>